--- a/src/app/shared/authentication/signup/signup.component.html
+++ b/src/app/shared/authentication/signup/signup.component.html
@@ -98,7 +98,7 @@
 
     </form>
     <div class="controls">
-        <button class="confirm" (click)="continueToThird()">ACCEPT AND CONTINUE</button>
+        <button class="confirm" (click)="continueToThird()">CONTINUE</button>
         <button class="cancel" (click)="returnToPreviusStage()">CANCEL</button>
     </div>
 </section>
