--- a/src/app/tab3/gunlist/gunlist.component.html
+++ b/src/app/tab3/gunlist/gunlist.component.html
@@ -1,45 +1,18 @@
-<ion-content>
+<section>
     <header>
-        <ion-icon style="position: absolute;left: 0;padding-left: 10px;" (click)="onSaveWeapons()" ios="ios-arrow-back"
-                  md="md-arrow-back"></ion-icon>
-        <h1 *ngIf="!models">Select Weapon Type</h1>
-        <h1 *ngIf="models">Select Model</h1>
-    </header>
-    <div class="wrapper">
-        <ion-searchbar showcancelbutton="" (ionInput)="filterList($event)"></ion-searchbar>
-        <div *ngIf="myGuns && !models">
-            <div class="allGuns">
-                <img src="../../../assets/icons/rifle.png">
-                <h1>My Guns</h1>
-            </div>
-            <div class="my-weapons-wrapper">
-                <div class="list-item" *ngFor="let item of myGuns">
-                    <span (click)="onShowModel(item)">{{ item}}</span>
-                    <div class="icon-wrapper">
-                        <ion-icon (click)="removeMyGun(item)" name="close"></ion-icon>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div>
-            <div class="allGuns">
-                <img src="../../../assets/icons/rifle.png">
-                <h1>All Guns</h1>
-            </div>
-            <div class="all-weapons-wrapper" *ngIf="!models">
-                <div class="list-item" *ngFor="let item of DEFUALT_GUNS" (click)="onSingleClick(item)">
-                    <span>{{ item}}</span>
-                </div>
+            <img (click)="onBackPressed()" src="assets/icons/Arrow%20@3x.png">
+            <span>Select Weapon</span>
+        </div>
+    </header>
+    <div class="content">
+        <div class="all-weapons-title"> All Weapons</div>
+        <div class="weapon-list-wrapper">
+            <div (click)="onModelClicked(weapon)" class="weapon-list" *ngFor="let weapon of DEFUALT_GUNS">
+                <span class="weapon-title">{{weapon}}</span>
+                <img *ngIf="isWeaponSelected(weapon)" src="assets/icons/Icon%20-%20Check%20Circle%20-%20Filled.svg">
             </div>
         </div>
-        <!--        <ion-list *ngIf="models">-->
-        <!--            <ion-item (click)="onModelClicked(item)" *ngFor="let item of models">-->
-        <!--                <ion-label>{{ item.model }}</ion-label>-->
-
-        <!--            </ion-item>-->
-        <!--        </ion-list>-->
+        <div class="place-holder"></div>
     </div>
-    <div class="saveBtn">
-        <button (click)="onSaveWeapons()"> Save</button>
-    </div>
-</ion-content>
+</section>
