--- a/src/app/tab3/gunlist/gunlist.component.scss
+++ b/src/app/tab3/gunlist/gunlist.component.scss
@@ -1,60 +1,95 @@
 @import "../../../assets/colors";
 
-header {
-  background-color: $headerBG;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10%;
-  width: 100%;
-  font-size: 6vw;
-  color: $profile-bg;
-}
-
-.wrapper {
- height: 80%;
-  overflow-y: auto;
-
-  .allGuns {
+section {
+  header {
+    height: 56px;
+    margin-top: 24px;
     display: flex;
     align-items: center;
+    justify-content: center;
 
-    img {
-      height: 40px;
-      border: 1px solid;
-      border-radius: 100%;
-      margin-right: 10px;
-      margin-left: 10px;
+    div {
+      height: 24px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        position: absolute;
+        left: 24px;
+        height: 30px;
+
+      }
+
+      span {
+        width: 100%;
+        height: 24px;
+        font-family: Roboto;
+        font-size: 20px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.2;
+        letter-spacing: 0.26px;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.8);
+      }
+    }
+  }
+
+  .content {
+    .all-weapons-title {
+      font-family: Roboto;
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.17;
+      letter-spacing: 1.88px;
+      text-align: left;
+      color: rgba(0, 0, 0, 0.61);
+      margin-top: 129px;
+      margin-left: 24px;
+    }
+
+    .weapon-list-wrapper {
+      overflow-y: scroll;
+      display: block;
+      flex-direction: column;
+      height: 621px;
+
+      .weapon-list {
+        height: 52px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #f2f2f2;
+        justify-content: space-between;
+        .weapon-title {
+          font-family: Roboto;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.14;
+          letter-spacing: 0.24px;
+          text-align: left;
+          color: rgba(0, 0, 0, 0.87);
+          margin-left: 36px;
+        }
+
+        img {
+          height: 20px;
+          width: 20px;
+          margin-right: 31px;
+        }
+      }
+    }
+
+    .place-holder {
+      width: 100%;
+      height: 97px;
     }
   }
 }
-
-.saveBtn {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 10vh;
-  button {
-    width: 40vw;
-    border-radius: 8px;
-    height: 8vh;
-    background: $black_two;
-    color: white;
-    font-size: 6vw;
-  }
-}
-
-.list-item {
-  padding: 0.5em;
-  border-top: 1px solid #0000002e;
-  border-bottom: 1px solid #0000002e;
-  height: 45px;
-  display: flex;
-
-  align-items: center;
-  justify-content: space-between;
-}
-
 
