--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -216,6 +216,7 @@ section.profile {
       height: 100%;
     }
   }
+
   div.controls {
     display: flex;
     flex-direction: column;
@@ -240,6 +241,7 @@ section.profile {
     letter-spacing: 1.25px;
     color: white;
   }
+
   button.cancel {
     height: 56px;
     border-radius: 4px;
@@ -252,336 +254,96 @@ section.profile {
   }
 }
 
-//.tab3-container {
-//  height: 100%;
-//  width: 100%;
-//  display: flex;
-//  flex-direction: column;
-//}
-//
-//header {
-//  display: flex;
-//  flex-direction: column;
-//  align-items: center;
-//  justify-content: space-evenly;
-//  background-color: $headerBG;
-//  height: 10%;
-//
-//  div.personal-titles {
-//    display: flex;
-//    flex-direction: column;
-//    align-items: center;
-//    box-sizing: border-box;
-//    padding: 0.2em 0;
-//
-//    p {
-//      margin: 0;
-//      color: $profile-bg;
-//      font-size: 6vw;
-//    }
-//
-//    p.weapon {
-//      color: $profile-bg;
-//      font-weight: 300;
-//      font-size: 4vw;
-//    }
-//  }
-//
-//  div.personal-widget {
-//    background-color: white;
-//    border-radius: 25px;
-//    display: flex;
-//    align-items: center;
-//    justify-content: space-between;
-//    position: relative;
-//
-//    width: 50%;
-//    height: 11vw;
-//
-//    div.avatar {
-//      position: absolute;
-//      top: 50%;
-//      left: 50%;
-//      transform: translate(-50%, -50%);
-//      border-radius: 100%;
-//      background-color: $profile-bg;
-//
-//      width: 15vw;
-//      height: 15vw;
-//
-//      display: flex;
-//      flex-direction: column;
-//      align-items: center;
-//      justify-content: space-around;
-//
-//      h1 {
-//        color: white;
-//        text-align: center;
-//        margin: 0;
-//        font-size: 6vw;
-//      }
-//    }
-//
-//    div.points,
-//    div.place {
-//      display: flex;
-//      flex-direction: column;
-//      align-items: center;
-//      box-sizing: border-box;
-//      padding: 0.2em;
-//      width: 30%;
-//      color: $profile-bg;
-//
-//      span.amount {
-//        color: $profile-bg;
-//        font-weight: 700;
-//        font-size: 4vw;
-//      }
-//
-//      p {
-//        margin: 0;
-//        font-size: 3vw;
-//      }
-//    }
-//  }
-//}
-//
-//
-//.wrapper {
-//  height: 100%;
-//  width: 100%;
-//  display: flex;
-//  flex-direction: column;
-//  background-color: $white_three;
-//
-//  .user-img-name {
-//    display: flex;
-//    flex-direction: column;
-//    align-items: center;
-//    justify-content: space-evenly;
-//    height: 20%;
-//
-//    img {
-//      height: 20vw;
-//      border-radius: 50%;
-//      width: 20vw;
-//    }
-//
-//    img.camera-icon {
-//      height: 25vw;
-//      padding: 1.5em;
-//    }
-//
-//    h5 {
-//      margin: 0;
-//    }
-//  }
-//
-//  .user-details {
-//    display: flex;
-//    height: 25%;
-//
-//    .read-mode {
-//      display: flex;
-//      justify-content: space-between;
-//      width: 70%;
-//      flex-direction: column;
-//
-//    }
-//
-//    .edit-mode {
-//      display: flex;
-//      flex-direction: column;
-//      width: 100%;
-//      justify-content: space-between;
-//    }
-//
-//
-//    .edit-input-wrapper {
-//      width: 70vw;
-//      justify-content: space-between;
-//    }
-//
-//    div {
-//      display: flex;
-//      flex-direction: row;
-//
-//      h3 {
-//        margin: 0;
-//        padding: 0;
-//        padding-left: 15px;
-//      }
-//
-//      h3.value {
-//        color: $profile-bg;
-//      }
-//    }
-//  }
-//
-//  .default-drill {
-//    display: flex;
-//    flex-direction: column;
-//    justify-content: space-around;
-//    height: 30%;
-//
-//    div {
-//      display: flex;
-//      flex-direction: row;
-//      justify-content: space-between;
-//      padding-left: 10px;
-//      padding-right: 10px;
-//      align-items: center;
-//
-//      img {
-//        width: 12vw;
-//        border-radius: 100%;
-//        border: 1px solid $profile-bg;
-//      }
-//
-//      span {
-//        padding: 0.5em;
-//        border: 1px solid;
-//        text-align: left;
-//        padding-left: 10px;
-//        font-size: 3vw;
-//        background: black;
-//        color: white;
-//        border-radius: 6px;
-//        min-width: 200px;
-//        text-align: center;
-//      }
-//    }
-//  }
-//}
-//
-//hr {
-//  width: 93%;
-//  height: 1px;
-//  background: #00000085;
-//}
-//
-//
-//.gunsWrapper {
-//  border: 1px solid;
-//  height: 45px;
-//
-//  .coma {
-//    border: 0 !important;
-//    margin: 0;
-//    padding: 0 !important;
-//  }
-//}
-//
-//.gunlist {
-//  position: absolute;
-//  top: 0;
-//  left: 0;
-//  height: 100%;
-//  width: 100%;
-//}
-//
-//.isDisabled {
-//  pointer-events: none;
-//  border: 1px solid #999999;
-//  background-color: #cccccc;
-//  color: #666666;
-//}
-//
-//.camera {
-//  width: 15vw !important;
-//  height: 15vw !important;
-//  border-radius: 0px !important;
-//}
-//
-//
-//.image-and-name {
-//  display: flex;
-//  flex-direction: column;
-//  align-items: center;
-//}
-//
-//.round-border {
-//  border: 0.5vw solid #70524b;
-//  position: relative;
-//  height: 20vw;
-//  border-radius: 50%;
-//  width: 20vw;
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//
-//  ion-icon {
-//    position: absolute;
-//    bottom: 0;
-//    border: 1px solid lightblue;
-//    border-radius: 20px;
-//    padding: 0.1em;
-//    color: blue;
-//    right: -12px;
-//    background: white;
-//  }
-//}
-//
-//.menuBtn {
-//  position: absolute;
-//  top: 2%;
-//  right: 2%;
-//  background-color: transparent;
-//
-//  span {
-//    font-size: 40px;
-//    font-weight: bold;
-//    color: $profile-bg;
-//  }
-//}
-//
-//.edit-btn {
-//  background-color: #3b3838;
-//  width: 60%;
-//  height: 8vw;
-//  height: 8vw;
-//  margin: 0.5em auto;
-//  color: white;
-//  font-size: 1.2em;
-//}
-//
-//.add-ip {
-//  display: flex;
-//  flex-direction: column;
-//  align-items: baseline;
-//
-//  label {
-//    color: $warm_grey;
-//  }
-//}
-//
-//
-//.edit-icon {
-//  position: absolute !important;
-//  height: 8vw !important;
-//  width: 8vw !important;
-//  top: 10% !important;
-//}
-//
-//.name {
-//  margin-top: 2vh;
-//  font-size: 4vw;
-//  font-weight: 100;
-//}
-//
-//.finish-wizard {
-//  height: 10%;
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//
-//  button {
-//    background-color: #3b3838;
-//    width: 40%;
-//     height: 7vw;
-//    margin: 0.5em auto;
-//    color: white;
-//    font-size: 1.2em;
-//    border-radius: 8px;
-//  }
-//}
+
+.gunslist {
+  width: 230px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  border-bottom: 1px solid #eaeaea;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.19;
+  letter-spacing: 0.21px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.do-you-have-target {
+  border-radius: 4px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  background-color: #ffffff;
+  margin-right: 16px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+
+  .top-row {
+    display: flex;
+     margin-left: 16px;
+    margin-top: 16px;
+    margin-right: 16px;
+    align-items: center;
+    .svg-wrapper {
+      height: 24px;
+      width: 24px;
+      background: #ce564b;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 5px;
+
+      svg {
+        fill: white;
+        height: 18px;
+        width: 18px;
+      }
+    }
+
+    .title {
+      font-family: Roboto;
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.17;
+      letter-spacing: 1.88px;
+      text-align: left;
+      color: rgba(0, 0, 0, 0.87);
+      margin-left: 16px;
+    }
+  }
+
+  p {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.17;
+    letter-spacing: normal;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.47);
+  }
+
+  button {
+    width: 312px;
+    height: 40px;
+    border-radius: 4px;
+    border: solid 1px #ce564b;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: 1.25px;
+    text-align: center;
+    color: #ce564b;
+  }
+}
