--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
@@ -5,12 +5,24 @@
         <div class="step-circles">
             <div class="circle" [ngClass]="{'active': stepOneActive}">
                 <p *ngIf="!stepOneComplete">1</p>
-                <p *ngIf="stepOneComplete">V</p>
+                <p *ngIf="stepOneComplete">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24.74 16.9">
+                        <path data-name="Path 16037"
+                              d="M24.32.43a1.47,1.47,0,0,0-2.07,0L9.31,13.37,2.5,6.56a1.45,1.45,0,0,0-2.07,0,1.47,1.47,0,0,0,0,2.07l7.84,7.84a1.47,1.47,0,0,0,2.07,0l14-14A1.46,1.46,0,0,0,24.32.43Z"
+                              transform="translate(0 0)"/>
+                    </svg>
+                </p>
             </div>
             <div class="separator" [ngClass]="{'active': stepTwoActive}"></div>
             <div class="circle" [ngClass]="{'active': stepTwoActive}">
                 <p *ngIf="!stepTwoComplete">2</p>
-                <p *ngIf="stepTwoComplete">V</p>
+                <p *ngIf="stepTwoComplete">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24.74 16.9">
+                        <path data-name="Path 16037"
+                              d="M24.32.43a1.47,1.47,0,0,0-2.07,0L9.31,13.37,2.5,6.56a1.45,1.45,0,0,0-2.07,0,1.47,1.47,0,0,0,0,2.07l7.84,7.84a1.47,1.47,0,0,0,2.07,0l14-14A1.46,1.46,0,0,0,24.32.43Z"
+                              transform="translate(0 0)"/>
+                    </svg>
+                </p>
             </div>
             <div class="separator" [ngClass]="{'active': stepTwoComplete }"></div>
             <div class="circle" [ngClass]="{'active': stepThreeActive}"><p>3</p></div>
