--- a/src/app/shared/authentication/signup/signup.component.html
+++ b/src/app/shared/authentication/signup/signup.component.html
@@ -2,7 +2,7 @@
     <form class="signInForm" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 
         <div class="row">
-            <label>
+            <label [ngClass]="{'hasValue': registerForm.controls.first_name.dirty || registerForm.controls.first_name.touched }">
                 <p>First Name</p>
                 <input type="text" formControlName="first_name" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }"/>
@@ -14,7 +14,7 @@
         </div>
 
         <div class="row">
-            <label>
+            <label [ngClass]="{'hasValue': registerForm.controls.last_name.dirty || registerForm.controls.last_name.touched }">
                 <p>Last Name</p>
                 <input type="text" formControlName="last_name" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }"/>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row">
-            <label>
+            <label [ngClass]="{'hasValue': registerForm.controls.email.dirty || registerForm.controls.email.touched }">
                 <p>Email</p>
                 <input type="email" formControlName="email" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
@@ -36,9 +36,9 @@
         </div>
 
         <div class="row">
-            <label>
+            <label [ngClass]="{'hasValue': registerForm.controls.password.dirty || registerForm.controls.password.touched }">
                 <p>Password</p>
-                <input type="password" formControlName="age" class="form-control"
+                <input type="password" formControlName="password" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.age.errors }" #password/>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="eye" viewBox="0 0 24 24">
                     <defs>
@@ -66,9 +66,9 @@
         </div>
 
         <div class="row">
-            <label>
+            <label [ngClass]="{'hasValue': registerForm.controls.label.dirty || registerForm.controls.label.touched }">
                 <p>Label</p>
-                <input type="password" formControlName="age" class="form-control" #password
+                <input type="password" formControlName="label" class="form-control" #password
                        [ngClass]="{ 'is-invalid': submitted && f.age.errors }"/>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="eye" viewBox="0 0 24 24">
                     <defs>
