--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
             <span>⋮</span>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item (click)="onActivityClicked(null)">Item 1</button>
             <button mat-menu-item>Item 2</button>
         </mat-menu>
     </div>
